--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 # KevinD3819346.github.io
-Name: Dang Anh Huy
-Student ID: s3819346
-Email address: kevindang2705@gmail.com
-Nationality and spoken language: Vietnamese
-Hobby: I love playing video games, especially a fast pace shooter game such as CS:GO or Call of Duty, I am also addicted to listening to music and watching movies mainly fantasy or action type of genres.
+#Name: Dang Anh Huy
+#Student ID: s3819346
+#Email address: kevindang2705@gmail.com
+#Nationality and spoken language: Vietnamese
+#Hobby: I love playing video games, especially a fast pace shooter game such as CS:GO or Call of Duty, I am also addicted to listening to music and watching movies mainly fantasy or action type of genres.
