--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
   </title>  
   
   <body>
-    <h1>
-   Name: Dang Anh Huy
-Student ID: s3819346
+  <h1>Name: Dang Anh Huy<h1/>
+<h2>Student ID: s3819346<h2/>
 Email address: kevindang2705@gmail.com
 Nationality and spoken language: Vietnamese
 Hobby: I love playing video games, especially a fast pace shooter game such as CS:GO or Call of Duty, I am also addicted to listening to music and watching movies mainly fantasy or action type of genres.
-    <h1/>
+  
       
     
   <body/>  
