--- a/index.html
+++ b/index.html
@@ -1,16 +1,9 @@
 <html>
-  <title>
-    Dang Anh Huy personal website
-  </title>  
-  
+  <title>Dang Anh Huy personal website</title>  
   <body>
-  <h1>Name: Dang Anh Huy<h1/>
-<h2>Student ID: s3819346<h2/>
-Email address: kevindang2705@gmail.com
-Nationality and spoken language: Vietnamese
-Hobby: I love playing video games, especially a fast pace shooter game such as CS:GO or Call of Duty, I am also addicted to listening to music and watching movies mainly fantasy or action type of genres.
-  
-      
+  <h1>Personal information:<h1/>
+
+
     
   <body/>  
 
