--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h2>Hobby: I love playing video games, especially a fast pace shooter game such as CS:GO or Call of Duty, I am also addicted to listening to music and watching movies mainly fantasy or action type of genres.<h2/>
   
   <h1>Interest in IT:<h1/>  
-    <p>I have always been a tech addict since I was a child, my dad who is an enthusiast teach me a lot about technology and how it could have great in impact in the future and that gives me tremendous passion to pursue this major. I regularly get to lay my hands on the newest technology and to understand the mechanisms of how things work.<p/>
+    <p>I have always been a tech addict since I was a child, my dad who is an enthusiast teach me a lot about technology and how it could have a great in impact in the future and that gives me a tremendous passion to pursue this major. I regularly get to lay my hands on the newest technology and to understand the mechanisms of how things work.<p/>
     <p><p/>
     <p><p/>
     <p><p/>
