--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h1>Interest in IT:<h1/>  
     <p>I have always been a tech addict since I was a child, my dad who is an enthusiast teach me a lot about technology and how it could have a great impact in the future and that gives me a tremendous passion to pursue this major. I regularly get to lay my hands on the newest technology and to understand the mechanisms of how things work.<p/>
     <p>In today's world, there is a lot of problems that relate to information leakage and that creates a huge exposure of users' data on the Internet unintentionally or sometimes on purpose. It could lead to the disclosure of sensitive data about a person’s life, address, phone numbers or where do they live. Perhaps have a greater impact if a company’s private project or design gets expose online, it would cause a lot of damage to the company’s reputation. Therefore, I think it is my duty to pursue cybersecurity, it demonstrates how we can avoid and counter if someone is trying to exploit the data and then prevent that from happening.<p/>
-    <p><p/>
+    <p>The reason why I chose RMIT Saigon is that the infrastructure of this university is the best there is, and also studying in the international environment prepares me with a lot of useful skills and helps to elevate my communication skills. And there is a great chance that after you finish the program you have better opportunities than students at other universities in Vietnam.<p/>
     <p><p/>
     <p><p/>
     
