--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <title>Dang Anh Huy personal website</title>  
   <body>
   <h1>Personal information:<h1/>
-    <h2><strong>Name:<strong/> Dang Anh Huy<h2/>
+    <h2>Name: Dang Anh Huy<h2/>
     <h2>Student ID: s3819346<h2/>
     <h2>Email address: kevindang2705@gmail.com<h2/>
     <h2>Nationality and spoken language: Vietnamese<h2/>
