--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-  <title>Dang Anh Huy personal website<title/>  
+  <title>Dang Anh Huy personal website</title>  
   <body>
   <h1>Personal information:<h1/>
     <h2>Name: Dang Anh Huy<h2/>
